# src/internal/services/swagger/api.swagger.json
@@ -347,6 +347,38 @@
         ]
       }
     },
+    "/api/campaigns": {
+      "post": {
+        "operationId": "Api_PostCampaign",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/citizenvPostCampaignResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/citizenvPostCampaignRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Api"
+        ]
+      }
+    },
     "/api/citizens": {
       "get": {
         "operationId": "Api_GetCitizen",
@@ -570,16 +602,13 @@
                 "motherPid": {
                   "type": "string"
                 },
-                "currentPlace": {
-                  "type": "string"
-                },
                 "jobName": {
                   "type": "string"
                 },
                 "pid": {
                   "type": "string"
                 },
-                "hometown": {
+                "callerId": {
                   "type": "string"
                 },
                 "religion": {
@@ -589,12 +618,6 @@
                   "type": "string"
                 },
                 "adminDivCode": {
-                  "type": "string"
-                },
-                "residencePlace": {
-                  "type": "string"
-                },
-                "callerId": {
                   "type": "string"
                 },
                 "residencePlaceCode": {
@@ -700,6 +723,37 @@
             "schema": {
               "$ref": "#/definitions/citizenvPostUserIssueRequest"
             }
+          }
+        ],
+        "tags": [
+          "Api"
+        ]
+      }
+    },
+    "/api/users/{id}": {
+      "get": {
+        "operationId": "Api_GetUserOne",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/citizenvGetUserOneResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "pattern": "message"
           }
         ],
         "tags": [
@@ -845,6 +899,20 @@
         "percent": {
           "type": "number",
           "format": "float"
+        },
+        "name": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        },
+        "startTime": {
+          "type": "string",
+          "format": "int64"
+        },
+        "endTime": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
@@ -1079,6 +1147,29 @@
         }
       }
     },
+    "citizenvGetUserOneResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "data": {
+          "$ref": "#/definitions/citizenvGetUserOneResponseData"
+        }
+      }
+    },
+    "citizenvGetUserOneResponseData": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "$ref": "#/definitions/citizenvUser"
+        }
+      }
+    },
     "citizenvGetUsersResponse": {
       "type": "object",
       "properties": {
@@ -1193,6 +1284,54 @@
     },
     "citizenvPostAuthPasswordResponseData": {
       "type": "object"
+    },
+    "citizenvPostCampaignRequest": {
+      "type": "object",
+      "properties": {
+        "callerId": {
+          "type": "string"
+        },
+        "startTime": {
+          "type": "string",
+          "format": "int64"
+        },
+        "endTime": {
+          "type": "string",
+          "format": "int64"
+        },
+        "codes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "citizenvPostCampaignResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "data": {
+          "$ref": "#/definitions/citizenvPostCampaignResponseData"
+        }
+      }
+    },
+    "citizenvPostCampaignResponseData": {
+      "type": "object",
+      "properties": {
+        "campaign": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/citizenvCampaign"
+          }
+        }
+      }
     },
     "citizenvPostCitizenRequest": {
       "type": "object",
